--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
 </div>
 <div class="center-content">
   <span class="selected-info">
-    <p>You selected: {{selectedValue}}</p>
+    <p>You selected: <span class="counter-color">{{selectedValue}}</span> stars</p>
   </span>
 </div>
